# n00m

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  README  README.md  README.md~  config.ini
lib/glad/include/glad/: gl.h
src/: color.h  config.c  config.h  graphics.c  graphics.h  lib_common.h  main.c  map.c  map.h  player.h  resources.h  state.c  state.c~  state.h  state.h~  util.c  util.h
